--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,13 @@
 export(BiomassSuccessionInput)
 export(ClimateConfigFile)
 export(checkVersion)
+export(insertCalibrateMode)
 export(insertDisturbanceExtensions)
 export(insertDisturbancesRandomOrder)
+export(insertEcoregionParameters)
+export(insertEcoregionsFiles)
+export(insertFireReductionParameters)
+export(insertHarvestReductionParameters)
 export(insertInitialCommunities)
 export(insertMinRelativeBiomass)
 export(insertOtherExtensions)
@@ -16,13 +21,19 @@ export(insertSuccessionExtensions)
 export(insertSufficientLight)
 export(insertTimestep)
 export(landisVersion)
+export(landis_find)
+export(landis_run)
 export(prepEcoregionParameters)
 export(prepEcoregionsFiles)
+export(prepFireReductionParameters)
+export(prepHarvestReductionParameters)
 export(prepInitialCommunities)
+export(prepInitialCommunitiesFromCohortData)
 export(prepMinRelativeBiomass)
 export(prepSpeciesData)
 export(prepSpeciesEcoregionDataFile)
 export(scenario)
+importFrom(LandR,standAgeMapGenerator)
 importFrom(data.table,":=")
 importFrom(data.table,.BY)
 importFrom(data.table,.EACHI)
@@ -31,16 +42,24 @@ importFrom(data.table,.I)
 importFrom(data.table,.N)
 importFrom(data.table,.NGRP)
 importFrom(data.table,.SD)
+importFrom(data.table,between)
+importFrom(data.table,copy)
 importFrom(data.table,data.table)
+importFrom(data.table,fifelse)
 importFrom(data.table,rbindlist)
-importFrom(dplyr,group_by)
+importFrom(data.table,set)
 importFrom(dplyr,mutate)
-importFrom(dplyr,rowwise)
-importFrom(dplyr,summarize)
+importFrom(fs,dir_create)
+importFrom(fs,dir_exists)
+importFrom(fs,dir_ls)
+importFrom(fs,file_exists)
+importFrom(fs,path_norm)
 importFrom(glue,glue)
 importFrom(glue,glue_collapse)
+importFrom(terra,"values<-")
 importFrom(terra,names)
 importFrom(terra,nlyr)
+importFrom(terra,rast)
 importFrom(terra,res)
 importFrom(terra,values)
 importFrom(terra,writeRaster)
