[WIP] biomass succession + more base fire scaffolding for v8

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,15 +2,21 @@
 
 export(BaseFireInput)
 export(BiomassSuccessionInput)
-export(ClimateConfigFile)
 export(insertCalibrateMode)
 export(insertDisturbanceExtensions)
 export(insertDisturbancesRandomOrder)
+export(insertDynamicFireRegionTable)
 export(insertEcoregionParameters)
 export(insertEcoregionsFiles)
+export(insertFireDamageTable)
 export(insertFireReductionParameters)
+export(insertFireRegionParametersTable)
+export(insertFuelCurveTable)
 export(insertHarvestReductionParameters)
 export(insertInitialCommunities)
+export(insertInitialFireRegionsMap)
+export(insertLogFile)
+export(insertMapNames)
 export(insertMinRelativeBiomass)
 export(insertOtherExtensions)
 export(insertRandomNumberSeed)
@@ -19,18 +25,23 @@ export(insertSpeciesDataFile)
 export(insertSpeciesEcoregionDataFile)
 export(insertSuccessionExtensions)
 export(insertSufficientLight)
+export(insertSummaryLogFile)
 export(insertTimestep)
+export(insertWindCurveTable)
 export(landis_find)
 export(landis_run)
+export(prepClimateConfigFile)
 export(prepEcoregionParameters)
 export(prepEcoregionsFiles)
 export(prepFireReductionParameters)
 export(prepHarvestReductionParameters)
 export(prepInitialCommunities)
+export(prepInitialFireRegionsMap)
 export(prepMinRelativeBiomass)
 export(prepSpeciesData)
 export(prepSpeciesEcoregionDataFile)
 export(scenario)
+export(simplifyCohorts)
 importFrom(LandR,standAgeMapGenerator)
 importFrom(data.table,":=")
 importFrom(data.table,.BY)
@@ -44,8 +55,12 @@ importFrom(data.table,between)
 importFrom(data.table,copy)
 importFrom(data.table,data.table)
 importFrom(data.table,fifelse)
+importFrom(data.table,fwrite)
 importFrom(data.table,rbindlist)
 importFrom(data.table,set)
+importFrom(data.table,setcolorder)
+importFrom(data.table,setkeyv)
+importFrom(data.table,setnames)
 importFrom(dplyr,mutate)
 importFrom(fs,dir_create)
 importFrom(fs,dir_exists)
