--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,6 +20,7 @@ Imports:
     terra
 Suggests:
     knitr,
+    map,
     rmarkdown,
     SpaDES.core,
     spelling,
@@ -27,6 +28,7 @@ Suggests:
     withr
 Remotes:
     PredictiveEcology/LandR@development,
+    PredictiveEcology/map@development,
     PredictiveEcology/SpaDES.core@development
 Config/testthat/edition: 3
 Config/testthat/parallel: true
