--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,9 +40,13 @@ export(prepInitialFireRegionsMap)
 export(prepMinRelativeBiomass)
 export(prepSpeciesData)
 export(prepSpeciesEcoregionDataFile)
+export(prep_daily_weather)
+export(proj_daymet)
+export(proj_nrcan_lcc)
 export(scenario)
 export(simplifyCohorts)
 importFrom(LandR,standAgeMapGenerator)
+importFrom(climateR,getDaymet)
 importFrom(data.table,":=")
 importFrom(data.table,.BY)
 importFrom(data.table,.EACHI)
@@ -69,6 +73,8 @@ importFrom(fs,file_exists)
 importFrom(fs,path_norm)
 importFrom(glue,glue)
 importFrom(glue,glue_collapse)
+importFrom(purrr,list_rbind)
+importFrom(purrr,map)
 importFrom(terra,"values<-")
 importFrom(terra,names)
 importFrom(terra,nlyr)
@@ -76,3 +82,6 @@ importFrom(terra,rast)
 importFrom(terra,res)
 importFrom(terra,values)
 importFrom(terra,writeRaster)
+importFrom(tidyr,pivot_longer)
+importFrom(tidyr,pivot_wider)
+importFrom(zonal,execute_zonal)
