--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,19 @@
 
 export(BiomassSuccessionInput)
 export(OriginalFireInput)
+export(OutputBiomassAgeInput)
+export(OutputBiomassInput)
+export(OutputCohortStatsInput)
+export(OutputMaxSppAgeInput)
+export(calibrate_fire)
 export(insertCalibrateMode)
+export(insertCellLength)
+export(insertClimateConfigFile)
 export(insertDisturbanceExtensions)
 export(insertDisturbancesRandomOrder)
+export(insertDuration)
 export(insertDynamicFireRegionTable)
+export(insertDynamicFireRegionsTable)
 export(insertEcoregionParameters)
 export(insertEcoregionsFiles)
 export(insertFireDamageTable)
@@ -23,6 +32,7 @@ export(insertRandomNumberSeed)
 export(insertSeedingAlgorithm)
 export(insertSpeciesDataFile)
 export(insertSpeciesEcoregionDataFile)
+export(insertSpecies_CSV_File)
 export(insertSuccessionExtensions)
 export(insertSufficientLight)
 export(insertSummaryLogFile)
@@ -34,6 +44,7 @@ export(prepClimateConfigFile)
 export(prepEcoregionParameters)
 export(prepEcoregionsFiles)
 export(prepFireReductionParameters)
+export(prepFireRegionParametersTable)
 export(prepHarvestReductionParameters)
 export(prepInitialCommunities)
 export(prepInitialFireRegionsMap)
@@ -41,10 +52,13 @@ export(prepMinRelativeBiomass)
 export(prepSpeciesData)
 export(prepSpeciesEcoregionDataFile)
 export(prep_daily_weather)
+export(prep_monthly_weather)
 export(proj_daymet)
 export(proj_nrcan_lcc)
+export(replicate)
 export(scenario)
 export(simplifyCohorts)
+export(writeClimateData)
 importFrom(LandR,standAgeMapGenerator)
 importFrom(climateR,getDaymet)
 importFrom(data.table,":=")
