fix notes from R CMD check

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,9 +18,12 @@ Imports:
     fs,
     glue,
     LandR,
+    methods,
     purrr,
+    stats,
     terra,
     tidyr,
+    utils,
     zonal
 Suggests:
     bcdata,
