--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ export(replicate)
 export(scenario)
 export(simplifyCohorts)
 export(writeClimateData)
+import(methods)
 importFrom(LandR,standAgeMapGenerator)
 importFrom(climateR,getDaymet)
 importFrom(data.table,":=")
@@ -79,6 +80,7 @@ importFrom(data.table,set)
 importFrom(data.table,setcolorder)
 importFrom(data.table,setkeyv)
 importFrom(data.table,setnames)
+importFrom(dplyr,all_of)
 importFrom(dplyr,mutate)
 importFrom(fs,dir_create)
 importFrom(fs,dir_exists)
@@ -89,6 +91,7 @@ importFrom(glue,glue)
 importFrom(glue,glue_collapse)
 importFrom(purrr,list_rbind)
 importFrom(purrr,map)
+importFrom(stats,na.omit)
 importFrom(terra,"values<-")
 importFrom(terra,names)
 importFrom(terra,nlyr)
@@ -98,4 +101,6 @@ importFrom(terra,values)
 importFrom(terra,writeRaster)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
+importFrom(utils,packageVersion)
+importFrom(utils,write.csv)
 importFrom(zonal,execute_zonal)
