--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -48,3 +48,6 @@ Remotes:
 Config/testthat/edition: 3
 Config/testthat/parallel: true
 VignetteBuilder: knitr
+Depends: 
+    R (>= 3.5)
+LazyData: true
