--- a/NAMESPACE
+++ b/NAMESPACE
@@ -79,6 +79,7 @@ importFrom(data.table,set)
 importFrom(data.table,setcolorder)
 importFrom(data.table,setkeyv)
 importFrom(data.table,setnames)
+importFrom(dplyr,all_of)
 importFrom(dplyr,mutate)
 importFrom(fs,dir_create)
 importFrom(fs,dir_exists)
