--- a/NAMESPACE
+++ b/NAMESPACE
@@ -100,5 +100,7 @@ importFrom(terra,values)
 importFrom(terra,writeRaster)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
+importFrom(utils,head)
 importFrom(utils,packageVersion)
+importFrom(utils,tail)
 importFrom(utils,write.csv)
