use furrr::future_map in climate data prep

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,7 +22,6 @@ Imports:
     glue,
     LandR,
     methods,
-    purrr,
     stats,
     terra,
     tidyr,
@@ -30,8 +29,10 @@ Imports:
 Suggests:
     bcdata,
     climateR,
+    furrr,
     knitr,
     map,
+    purrr,
     reproducible,
     rmarkdown,
     scfmutils,
@@ -46,6 +47,7 @@ Remotes:
     mikejohnson51/climateR,
     PredictiveEcology/LandR@development,
     PredictiveEcology/map@development,
+    PredictiveEcology/reproducible@development,
     PredictiveEcology/scfmutils@development,
     PredictiveEcology/SpaDES.core@development,
     PredictiveEcology/SpaDES.tools@development,
