fixing use of climate config

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,7 +43,7 @@ export(insertTimestep)
 export(insertWindCurveTable)
 export(landis_find)
 export(landis_run)
-export(prepClimateConfigFile)
+export(prepClimateConfig)
 export(prepEcoregionParameters)
 export(prepEcoregionsFiles)
 export(prepFireReductionParameters)
@@ -62,7 +62,7 @@ export(scenario)
 export(simplifyCohorts)
 export(writeClimateData)
 import(methods)
-importFrom(LandR,standAgeMapGenerator)
+importFrom(R6,R6Class)
 importFrom(data.table,":=")
 importFrom(data.table,.BY)
 importFrom(data.table,.EACHI)
