run landis in background process via `callr`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,6 +63,7 @@ export(simplifyCohorts)
 export(writeClimateData)
 import(methods)
 importFrom(R6,R6Class)
+importFrom(callr,r_bg)
 importFrom(data.table,":=")
 importFrom(data.table,.BY)
 importFrom(data.table,.EACHI)
