add 'rep' to 'landis_run()'
split the `callr::r_bg()` call out to new wrapper fun `landis_process`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ export(insertSummaryLogFile)
 export(insertTimestep)
 export(insertWindCurveTable)
 export(landis_find)
+export(landis_process)
 export(landis_run)
 export(prepClimateConfig)
 export(prepEcoregionParameters)
